adicionando uma pancada de coisas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3.8"
 
 # Itens comuns para o Spark
 x-spark-common: &spark-common
@@ -6,7 +6,7 @@ x-spark-common: &spark-common
   volumes:
     - ./jobs:/opt/bitnami/spark/jobs
   networks:
-    - spark_flow
+    - airflow
 
 # Itens comuns para o Airflow
 x-airflow-common: &airflow-common
@@ -14,7 +14,7 @@ x-airflow-common: &airflow-common
     context: .
     dockerfile: Dockerfile
   env_file:
-    - airflow.env
+    - .env
   volumes:
     - ./jobs:/opt/airflow/jobs
     - ./dags:/opt/airflow/dags
@@ -23,26 +23,26 @@ x-airflow-common: &airflow-common
     - postgres
     - mysql
   networks:
-    - spark_flow
+    - airflow
 
 services:
   spark-master:
     <<: *spark-common
     command: bin/spark-class org.apache.spark.deploy.master.Master
     ports:
-      - "9090:8080"
-      - "7077:7077"
+      - "${SPARK_MASTER_UI_PORT}:8080"
+      - "${SPARK_MASTER_RPC_PORT}:7077"
 
   spark-worker:
     <<: *spark-common
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:${SPARK_MASTER_RPC_PORT}
     depends_on:
       - spark-master
     environment:
       SPARK_MODE: worker
-      SPARK_WORKER_CORES: 2
-      SPARK_WORKER_MEMORY: 1g
-      SPARK_MASTER_URL: spark://spark-master:7077
+      SPARK_WORKER_CORES: ${SPARK_WORKER_CORES}
+      SPARK_WORKER_MEMORY: ${SPARK_WORKER_MEMORY}
+      SPARK_MASTER_URL: spark://spark-master:${SPARK_MASTER_RPC_PORT}
       PYSPARK_PYTHON: python3
       PYSPARK_DRIVER_PYTHON: python3
       HADOOP_CONF_DIR: /opt/hadoop/etc/hadoop
@@ -51,39 +51,39 @@ services:
   postgres:
     image: postgres:14.0
     environment:
-      - POSTGRES_USER=airflow
-      - POSTGRES_PASSWORD=airflow
-      - POSTGRES_DB=airflow
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     networks:
-      - spark_flow
+      - airflow
 
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: airflow
-      MYSQL_USER: airflow
-      MYSQL_PASSWORD: airflow_password
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     ports:
-      - "3306:3306"
+      - "${MYSQL_PORT}:3306"
     networks:
-      - spark_flow
+      - airflow
 
   webserver:
     <<: *airflow-common
     command: webserver
     ports:
-      - "8080:8080"
+      - "${AIRFLOW_WEBSERVER_PORT}:8080"
     depends_on:
       - scheduler
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: mysql+pymysql://airflow:airflow_password@mysql:3306/airflow
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: mysql+pymysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql:${MYSQL_PORT}/${MYSQL_DATABASE}
       PYSPARK_PYTHON: python3
       PYSPARK_DRIVER_PYTHON: python3
 
   scheduler:
     <<: *airflow-common
-    command: bash -c "airflow db migrate && airflow users create --username admin --firstname Thiago --lastname Mares --role Admin --email thiagfmares@outlook.com --password admin && airflow scheduler"
+    command: bash -c "airflow db migrate && airflow users create --username ${AIRFLOW_ADMIN_USERNAME} --firstname ${AIRFLOW_ADMIN_FIRSTNAME} --lastname ${AIRFLOW_ADMIN_LASTNAME} --role Admin --email ${AIRFLOW_ADMIN_EMAIL} --password ${AIRFLOW_ADMIN_PASSWORD} && airflow scheduler"
 
 networks:
-  spark_flow:
+  airflow:
