modificando o passo inicial da dag criada

--- a/.env
+++ b/.env
@@ -25,7 +25,14 @@ AIRFLOW_ADMIN_FIRSTNAME=Thiago
 AIRFLOW_ADMIN_LASTNAME=Mares
 AIRFLOW_ADMIN_EMAIL=thiagfmares@outlook.com
 AIRFLOW_ADMIN_PASSWORD=admin
+AIRFLOW__CORE__LOAD_EXAMPLES=False
+AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+AIRFLOW__WEBSERVER_BASE_URL=http://localhost:8080
+AIRFLOW__WEBSERVER__SECRET_KEY=46BKJoQYlPPOexq0OhDZnIlNepKFf87WFwLbfzqDDho=
 
 # AWS S3
 AWS_ACCESS_KEY_ID=AKIAZI2LDILVTCRC5Y5I
 AWS_SECRET_ACCESS_KEY=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
+
+
